--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
-    "@radix-ui/react-toggle": "^1.0.1",
+    "@radix-ui/react-switch": "^1.0.1",
+    "animate.css": "^4.1.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.40.0",
     "react-router-dom": "^6.4.4",
-    "styled-components": "^5.3.6",
-    "zod": "^3.19.1"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
